# allium-cli

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  install.sh  lint.sh  lint_fix.sh  pyproject.toml  release.sh  test.sh
.github/workflows/: ci.yml  release.yml
cli/: main.py
cli/auth/: api_key.py  tempo.py  x402_key.py  x402_privy.py
cli/clients/: __init__.py  factory.py  http.py  protocol.py  tempo.py  x402.py
cli/commands/: __init__.py  auth.py  explorer.py  mp.py  realtime.py
cli/constants/: __init__.py  api.py  config.py  ui.py
cli/types/: __init__.py  config.py  context.py  enums.py  labels.py  profiles.py
cli/utils/: async_cmd.py  body.py  config.py  console.py  cost_log.py  errors.py  options.py  output.py  payment.py  time.py  version.py
tests/: test_config.py  test_cost_log.py  test_explorer.py  test_helpers.py  test_main.py  test_models.py  test_output.py  test_x402.py  test_x402_client.py
