[project]
name = "allium-cli"
version = "0.2.1"
description = "CLI for Allium blockchain data APIs"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "Allium", email = "support@allium.so" }]
classifiers = [
    "Environment :: Console",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database :: Front-Ends",
]
dependencies = [
    "click>=8.1",
    "httpx~=0.27",
    "pydantic>=2.0",
    "questionary>=2.0",
    "rich>=13.0",
    "tomli-w>=1.0",
    "eth-account~=0.13",
    "privy-client~=0.5",
    "pympp[tempo]==0.3",
    "rich-click>=1.9.7",
]

[project.urls]
Documentation = "https://docs.allium.so"
Homepage = "https://allium.so"
Repository = "https://github.com/Allium-Science/allium-cli"

[project.scripts]
allium = "cli.main:main"

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.0",
    "pre-commit>=4.0",
    "commitizen>=4.0",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]


[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.1"
version_files = ["pyproject.toml:^version"]
tag_format = "cli.prod.v$version"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
